--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ nav
 .presentation
 {
 	width: 80%;
-	margin: 10px 10px 10px 10px;
+	margin: 50px 10px 100px 10px;
 	border: 2px black solid;
 	box-shadow: 3px 3px 6px black;
 	background-color: #DADADA;
@@ -102,8 +102,14 @@ nav
 .presentation p
 {
 	display: block;
-	text-align: center;
+	padding: 10px 50px 10px 50px;
+	text-align: justify;
 	font-size: 115%;
+}
+
+.presentation ul li
+{
+	text-align: left;
 }
 
 .presentation .titre2:hover
@@ -114,18 +120,25 @@ nav
 .textgroup
 {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 }
 
 footer
 {
-	display: flex;
+
+	text-align: left;
 	padding-left: 5px;
 	background:#6C6C6C;
-	position:absolute;
+	position:relative;
 	bottom:0;
 	width:100%;
 	padding-top:50px;
 	height:50px;
+}
+
+footer .num
+{
+	text-align: left;
+
 }
